2000-01-05  Dalibor Topic <robilad@yahoo.com>

	* gnu/testlet/java/lang/reflect/Method/invoke.java: Pass argument
	to InvocationTargetException constructor.

2000-01-04  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/lang/Class/reflect.java: New file.
	* gnu/testlet/java/lang/Class/rf_help.java: New file.

1999-12-24  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/SimpleTestHarness.java (debug): Formatting fix.

1999-12-23  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/lang/reflect/Method/invoke.java (try_invoke):
	Compare result class against expected class, not against
	`expect'.

1999-12-21  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/lang/reflect/Method/invoke.java: New file.

	* gnu/testlet/java/lang/reflect/Modifier/toString12.java: New
	file.

1999-11-09  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/io/ObjectInputOutput/OutputTest.java: Tag as
	JDK1.2.
	* gnu/testlet/java/io/ObjectInputOutput/InputTest.java: Tag as
	JDK1.2; the `Test' class uses a 1.2-specific feature.

Sun Jul 25 01:26:40 1999  Anthony Green  <green@cygnus.com>

	* gnu/testlet/java/io/ObjectStreamClass/Test.java: New file.  All
 	of these new files were contributed by Geoff Berry <gcb@gnu.org>.
	* gnu/testlet/java/io/ObjectInputOutput/InputTest.java: New file.
	* gnu/testlet/java/io/ObjectInputOutput/OutputTest.java: New file.
	* gnu/testlet/java/io/ObjectInputOutput/Test.java: New file.
	* gnu/testlet/java/io/ObjectInputOutput/Test$BadField.data: New file.
	* gnu/testlet/java/io/ObjectInputOutput/Test$CallDefault.data: New file.
	* gnu/testlet/java/io/ObjectInputOutput/Test$Extern.data: New file.
	* gnu/testlet/java/io/ObjectInputOutput/Test$GetPutField.data: New file.
	* gnu/testlet/java/io/ObjectInputOutput/Test$HairyGraph.data: New file.
	* gnu/testlet/java/io/ObjectInputOutput/Test$NoCallDefault.data: New file.
	* gnu/testlet/java/io/ObjectInputOutput/Test$NotSerial.data: New file.
	* gnu/testlet/java/io/ObjectInputOutput/write-ref-data.sh: New file.