@@ -1,3 +1,11 @@
+2000-01-05  Tom Tromey  <tromey@cygnus.com>
+
+	* gnu/testlet/java/lang/Class/reflect.java (test): Added tests for
+	getField, getDeclaredFields, getFields, getMethod, getMethods,
+	getDeclaredMethod, getDeclaredMethods.
+	(do_nothing): New method.
+	(getMethod): Likewise.
+
 2000-01-05  Dalibor Topic <robilad@yahoo.com>
 
 	* gnu/testlet/java/lang/reflect/Method/invoke.java: Pass argument
